# django-smartnotes-project

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements-dev.txt  requirements.txt
home/: urls.py  views.py
home/templates/home/: advantages.html  welcome.html
notes/: admin.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py
notes/templates/notes/: note_delete.html  note_detail.html  note_form.html  notes_list.html
smartnotes/: settings.py  urls.py
static/templates/: base.html
static/templates/includes/: logout.html
static/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_subject.txt
user/: forms.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/templates/user/: create_user.html  profile.html
