[build-system]
# Вказуємо інструменти, необхідні для створення пакета (Setuptools)
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Метадані вашого проекту
name = "smartnotes-django-project"
version = "0.1.0"
description = "Core Django project configuration for smart notes."
authors = [
    {name = "Kateryna Lisniak", email = "catharinalesnyak@gmail.com"}
]
requires-python = ">=3.14"
license = { text = "UNLICENSED" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

# Тут можна дублювати Django, але requirements.txt все одно важливіший.
# Якщо ви не використовуєте pip install ., цю секцію можна залишити короткою.
dependencies = [
    "django>=5.2.8",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
]


[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 78
target-version = "py314"
exclude = [
    "migrations",
    "__pycache__",
    ".venv",
    "static",
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "UP", "DJ", "B", "RUF"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D203", # конфліктує з D211
    "D213", # конфліктує з D212
    "F401",
    "RUF100",
    "I001",
    "DJ001",
]
